# chessable-courses

./: .cursorrules  .gitignore  README.md  pyproject.toml
app/: __init__.py  main.py  puzzles.py  puzzles_600_800.pgn
beginner-puzzles/: Advanced Pawn.pgn  Advantage.pgn  Anastasia Mate.pgn  Arabian Mate.pgn  Attacking F2F7.pgn  Attraction.pgn  Back Rank Mate.pgn  Bishop Endgame.pgn  Boden Mate.pgn  Capturing Defender.pgn  Clearance.pgn  Crushing.pgn  Defensive Move.pgn  Deflection.pgn  Discovered Attack.pgn  Double Bishop Mate.pgn  Double Check.pgn  Dovetail Mate.pgn  En Passant.pgn  Endgame.pgn  Equality.pgn  Exposed King.pgn  Fork.pgn  Hanging Piece.pgn  Hook Mate.pgn  Interference.pgn  Intermezzo.pgn  Kill Box Mate.pgn  Kingside Attack.pgn  Knight Endgame.pgn  Long.pgn  Master Vs Master.pgn  Master.pgn  Mate In 1.pgn  Mate In 2.pgn  Mate In 3.pgn  Mate In 4.pgn  Mate In 5.pgn  Mate.pgn  Middlegame.pgn  (+21 more)
beginner-tactics-mastery-1000-puzzles-old/: 02-basics-2-free-pieces.pgn  03-basics-3-back-rank-blitz.pgn  04-basics-4-fork-attack.pgn  05-basics-5-safe-to-capture.pgn  06-patterns-1-pins-to-the-king.pgn  07-patterns-2-checkmate-patterns.pgn  08-patterns-3-attack-two-things.pgn  09-patterns-4-pin-the-pieces.pgn  10-patterns-5-skewer-attack.pgn  11-patterns-6-danger-alert.pgn  12-review-skills-check-1.pgn  13-tactics-1-surprise-attack.pgn  14-tactics-2-remove-the-guard.pgn  15-tactics-3-two-move-checkmate.pgn  16-tactics-4-surprise-check.pgn  17-tactics-5-back-rank-breakthrough.pgn  18-tactics-6-overworked-pieces.pgn  19-tactics-7-defense-first.pgn  (+34 more)
tests/: conftest.py  (+3 more)
(+530 files in other folders)
